--- a/Passtimes/Passtimes/DetailEvent.storyboard
+++ b/Passtimes/Passtimes/DetailEvent.storyboard
@@ -124,6 +124,43 @@
                                     <constraint firstItem="bTJ-6v-BAu" firstAttribute="bottom" secondItem="nab-bv-01C" secondAttribute="bottom" id="meI-lI-w0q"/>
                                 </constraints>
                             </view>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hi7-cB-KHc">
+                                <rect key="frame" x="335" y="36" width="24" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="FnC-Df-Cue"/>
+                                    <constraint firstAttribute="width" constant="24" id="rir-vw-LXk"/>
+                                </constraints>
+                                <state key="normal" image="ic_delete"/>
+                                <connections>
+                                    <action selector="deleteEvent:" destination="aBu-Bn-SLl" eventType="touchUpInside" id="GxA-0H-UUs"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Attendees" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ATu-nE-ZKE">
+                                <rect key="frame" x="16" y="209.5" width="343" height="39.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="33"/>
+                                <color key="textColor" red="0.1333333333" green="0.12941176469999999" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="r5d-tH-7G3">
+                                <rect key="frame" x="0.0" y="259" width="375" height="398"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="1pL-N3-Wlq">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="21" minY="6" maxX="21" maxY="16"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cellIdentifier" id="e1e-7k-Fxm" customClass="cellIdentifier">
+                                        <rect key="frame" x="21" y="6" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FRw-mM-cVL">
                                 <rect key="frame" x="0.0" y="617" width="375" height="50"/>
                                 <color key="backgroundColor" red="0.12549019610000001" green="0.77647058820000003" blue="0.68235294120000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -138,37 +175,34 @@
                                     <action selector="joinEvent:" destination="aBu-Bn-SLl" eventType="touchUpInside" id="W9i-bn-3P9"/>
                                 </connections>
                             </button>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hi7-cB-KHc">
-                                <rect key="frame" x="335" y="36" width="24" height="24"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="24" id="FnC-Df-Cue"/>
-                                    <constraint firstAttribute="width" constant="24" id="rir-vw-LXk"/>
-                                </constraints>
-                                <state key="normal" image="ic_delete"/>
-                                <connections>
-                                    <action selector="deleteEvent:" destination="aBu-Bn-SLl" eventType="touchUpInside" id="GxA-0H-UUs"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="uNb-B9-aim" firstAttribute="trailing" secondItem="hi7-cB-KHc" secondAttribute="trailing" constant="16" id="0r9-uU-UNT"/>
+                            <constraint firstItem="r5d-tH-7G3" firstAttribute="leading" secondItem="uNb-B9-aim" secondAttribute="leading" id="5Ha-ug-NqD"/>
                             <constraint firstItem="hi7-cB-KHc" firstAttribute="centerY" secondItem="4CZ-BF-V0u" secondAttribute="centerY" id="EvV-iI-HhW"/>
                             <constraint firstItem="hQk-X9-qOc" firstAttribute="height" secondItem="0Sx-Ty-E28" secondAttribute="height" multiplier="0.2" id="Evw-tU-kWt"/>
                             <constraint firstItem="uNb-B9-aim" firstAttribute="trailing" secondItem="FRw-mM-cVL" secondAttribute="trailing" id="F6G-vb-4gh"/>
                             <constraint firstItem="uNb-B9-aim" firstAttribute="bottom" secondItem="FRw-mM-cVL" secondAttribute="bottom" id="FAw-tm-blV"/>
+                            <constraint firstItem="ATu-nE-ZKE" firstAttribute="top" secondItem="hQk-X9-qOc" secondAttribute="bottom" constant="16" id="Fh0-vJ-0tN"/>
+                            <constraint firstItem="r5d-tH-7G3" firstAttribute="top" secondItem="ATu-nE-ZKE" secondAttribute="bottom" constant="10" id="Hqp-NQ-SP2"/>
+                            <constraint firstItem="FRw-mM-cVL" firstAttribute="bottom" secondItem="r5d-tH-7G3" secondAttribute="bottom" constant="10" id="LKr-FK-z7G"/>
                             <constraint firstItem="hi7-cB-KHc" firstAttribute="bottom" secondItem="4CZ-BF-V0u" secondAttribute="bottom" id="SCt-Nh-Bxd"/>
+                            <constraint firstItem="uNb-B9-aim" firstAttribute="trailing" secondItem="r5d-tH-7G3" secondAttribute="trailing" id="XC7-hU-Ill"/>
                             <constraint firstItem="hQk-X9-qOc" firstAttribute="leading" secondItem="4CZ-BF-V0u" secondAttribute="leading" id="Yte-2A-3AI"/>
+                            <constraint firstItem="ATu-nE-ZKE" firstAttribute="leading" secondItem="uNb-B9-aim" secondAttribute="leading" constant="16" id="aVF-Nu-fMU"/>
                             <constraint firstItem="4CZ-BF-V0u" firstAttribute="leading" secondItem="uNb-B9-aim" secondAttribute="leading" constant="16" id="dic-74-A7m"/>
                             <constraint firstItem="hQk-X9-qOc" firstAttribute="top" secondItem="4CZ-BF-V0u" secondAttribute="bottom" id="qdu-lv-Nwu"/>
                             <constraint firstItem="FRw-mM-cVL" firstAttribute="leading" secondItem="uNb-B9-aim" secondAttribute="leading" id="r9j-7Y-9FS"/>
                             <constraint firstItem="uNb-B9-aim" firstAttribute="trailing" secondItem="hQk-X9-qOc" secondAttribute="trailing" constant="16" id="rfT-Is-kUr"/>
+                            <constraint firstItem="uNb-B9-aim" firstAttribute="trailing" secondItem="ATu-nE-ZKE" secondAttribute="trailing" constant="16" id="sbH-ld-iUF"/>
                             <constraint firstItem="hi7-cB-KHc" firstAttribute="top" secondItem="4CZ-BF-V0u" secondAttribute="top" id="tTz-Dh-d2C"/>
                             <constraint firstItem="4CZ-BF-V0u" firstAttribute="top" secondItem="uNb-B9-aim" secondAttribute="top" constant="16" id="yDV-Vh-bDe"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="uNb-B9-aim"/>
                     </view>
                     <connections>
+                        <outlet property="attendeesCollectionView" destination="r5d-tH-7G3" id="3mf-dx-bCc"/>
                         <outlet property="day" destination="ROp-Re-wgv" id="r41-Sp-HNC"/>
                         <outlet property="delete" destination="hi7-cB-KHc" id="8Jd-0d-Ng9"/>
                         <outlet property="eventTitle" destination="F3w-cB-crv" id="WhF-Z5-2R5"/>
